--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Este es un proyecto de Git</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae beatae quos, dicta et, nostrum porro quasi quidem dolorem commodi ut laborum aliquid distinctio explicabo ratione? Nobis neque veniam qui nisi!</p>
 </body>
 </html>
